--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@
 
 Name Name:
   name        : "Antoine Lesage-Landry"
-  uri         : "http://alesagelandrygithub.io"
-  email       : "alandry@ece.utoronto.ca"
+  uri         : "http://alesagelandrygithub.io/fr/"
+  email       : "alesagelandry@berkeley.edu"
   bio         : ""
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
