--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Name Name:
   name        : "Antoine Lesage-Landry"
-  uri         : "http://alesagelandrygithub.io/fr/"
+  uri         : "https://alesagelandrygithub.io/fr/"
   email       : "alesagelandry@berkeley.edu"
   bio         : ""
   avatar      : "bio-photo-2.jpg"
