--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Antoine Lesage-Landry"
 title_separator          : "-"
 name                     : &name "Antoine Lesage-Landry"
 description              : &description "Postdoctoral Scholar, UC Berkeley"
-url                      : https://alesagelandry.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://alesagelandry.github.io/fr # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "alesagelandry/alesagelandry.github.io/fr"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
