--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_separator          : "-"
 name                     : &name "Antoine Lesage-Landry"
 description              : &description "Postdoctoral Scholar, UC Berkeley"
 url                      : https://alesagelandry.github.io/fr # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "https://alesagelandry.github.io/fr" # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "alesagelandry/alesagelandry.github.io/fr"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
