--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 Name Name:
   name        : "Antoine Lesage-Landry"
   uri         : "https://alesagelandrygithub.io/fr/"
-  email       : "alesagelandry@berkeley.edu"
+  email       : "antoine.lesage-landry@polymtl.ca"
   bio         : ""
   avatar      : "bio-photo-2.jpg"
   twitter     : "name"
