--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Antoine Lesage-Landry"
 title_separator          : "-"
 name                     : &name "Antoine Lesage-Landry"
-description              : &description "Professeur adjoint, Polytechnique Montréal"
+description              : &description "Professeur adjoint, Polytechnique Montréal & GERAD"
 url                      : https://alesagelandry.github.io/fr # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "alesagelandry/alesagelandry.github.io/fr"
