--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Antoine Lesage-Landry"
   avatar           : "all.png"
-  bio              : "Professeur adjoint, Polytechnique Montréal"
+  bio              : "Professeur adjoint, Polytechnique Montréal, GERAD & Mila"
   location         : "Montréal, Québec, Canada"
   employer         :
   googlescholar    : "https://scholar.google.ca/citations?user=E-fXND0AAAAJ&hl=en"
